# storm-pulse

./: .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.forgejo/workflows/: test.yml
_architecture/adrs/core/: 000-internal-module-architecture.md  001-fitness-functions.md  002-release-and-ci-cd-pipeline.md  003-rootless-install-mode.md  005-integration-contract.md  (+3 more)
_architecture/specs/: core-005-integrations-wire.md
authoring/: __init__.py  __main__.py  signer.py
config/: stormpulse.example.toml
docker/: docker-compose.test.yml  garage.test.yml  garage.toml
fitness/: __init__.py  __main__.py  baseline.txt  dependency_allowlist.py  external_loader_p1.py  integration_contract.py  merge_fence.py  no_garage_cli_scrape.py  no_shell.py  private_imports.py  wizard_sdk_p2.py
scripts/: pre_release_check.py  private_loader_p1_smoke.py  wizard_sdk_p2_smoke.py
storm_pulse_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stormpulse/: __init__.py  __main__.py  agent.py  auth.py  config.py  enroll.py  events.py  init.py  metrics.py  protocol.py  status.py  system_inventory.py
stormpulse/agent/: __init__.py  bootstrap.py  dispatch.py  external_adapters.py  garage_actions.py  integrations_manifest.py  integrations_runtime.py  log_batches.py  long_running.py  loops.py  metadata.py  reconnect.py  refresh.py  register.py  signoff_guard.py  signoff_nag.py  signoff_push.py  ssl_context.py
stormpulse/caddy/: __init__.py  cert_status.py  commands.py  config.py  init.py  integration.py  preconditions.py  sync.py
stormpulse/cli/: __init__.py  caddy.py  config_check.py  enroll.py  garage.py  init.py  integration.py  investigate.py  log.py  logging.py  logs.py  migrate.py  rclone.py  restart.py  run.py  signoff.py  status.py  update.py  wizard_run.py
stormpulse/commands/: __init__.py  deploy.py  jobs.py  registry.py
stormpulse/garage/: __init__.py  admin_api.py  attach_account_key.py  bucket_resolver.py  clear_bucket.py  commands.py  config.py  converge_account_key_rotation.py  delete_key.py  delete_provisioned_bucket.py  detach_account_key.py  discover.py  enforce_account_key_tier.py  get_bucket_owners.py  get_key_buckets.py  init.py  integration.py  investigate.py  parse.py  preconditions.py  provision_account_key.py  provision_additional_key.py  provision_bucket.py  rotate_key.py  runner.py  s3.py  set_account_key_capability.py  set_cors.py  set_quota.py  snapshot_and_reap_account_key.py  state.py  tiers.py  walk_bucket_stats.py
stormpulse/init/: __init__.py  checks.py  compose.py  files.py  generate.py  host_native_logs.py  migrate.py  mode.py  orchestrator.py  prompts.py  registry.py  system.py
stormpulse/integrations/: __init__.py  readiness.py  registry.py
stormpulse/logging/: __init__.py  init.py  parsers.py  positions.py  shipper.py  tailer.py  writer.py
stormpulse/rclone/: __init__.py  commands.py  config.py  init.py  integration.py  preconditions.py  runner.py  wizard.py
stormpulse/sdk/: __init__.py  declaration.py  findings.py  investigate.py  plan.py  questions.py  readiness.py  wizard.py
stormpulse/signoff/: __init__.py  init.py
stormpulse/wizard/: __init__.py  engine.py  env.py  errors.py  journal.py  mutations.py  providers.py  receipt.py  toml_edit.py
tests/: conftest.py  helpers.py  test_agent.py  test_auth.py  test_commands.py  test_config.py  test_enroll.py  test_events.py  test_fitness_wizard.py  test_init.py  test_integration.py  test_integrations.py  test_investigate.py  test_jobs.py  test_logs.py  test_metrics.py  test_migrate.py  test_mode.py  test_protocol.py  test_restart.py  test_signoff.py  test_status.py  test_update.py  test_wizard_run.py
tests/agent/: conftest.py  test_bootstrap.py  test_dispatch.py  test_garage_actions.py  test_garage_refresh.py  test_integrations_runtime.py  test_log_batches.py  test_long_running.py  test_loops.py  test_metadata.py  test_post_success_hook.py  test_reconnect.py  test_register.py  test_signoff_guard.py  test_signoff_nag.py  test_signoff_push.py  test_ssl_context.py
tests/authoring/: test_signer.py
tests/caddy/: test_caddy_init.py  test_cert_status.py  test_commands.py  test_sync.py  test_verify_drop_in.py
tests/garage/: _fake_garage.py  fixtures.py  test_admin_api_reads.py  test_admin_api_writes.py  test_admin_bucket_mapping_contract.py  test_admin_meter.py  test_affected_buckets.py  test_agent_garage.py  test_attach_account_key.py  test_bucket_resolver.py  test_cleanup_uploads.py  test_clear_bucket.py  test_commands.py  test_config.py  test_converge_account_key_rotation.py  test_delete_customer_key.py  test_delete_key.py  test_delete_provisioned_bucket.py  test_detach_account_key.py  test_detector.py  test_discover.py  test_enforce_account_key_tier.py  test_fake_garage.py  test_garage_init.py  test_get_bucket_owners.py  test_get_key_buckets.py  test_parse.py  test_preconditions.py  test_provision_account_key.py  test_provision_additional_key.py  test_provision_bucket.py  test_rotate_key.py  test_s3_integration.py  test_s3_parsing.py  test_s3_sigv4.py  test_s3_transport.py  test_set_account_key_capability.py  test_set_cors.py  test_set_quota.py  test_snapshot_and_reap_account_key.py  (+4 more)
tests/init/: test_host_native_logs.py
tests/integrations/: test_cli_doctor_p2.py  test_cli_readiness.py  test_readiness.py
tests/logging/: test_docker_tailer.py  test_logging_init.py  test_parsers.py  test_positions.py  test_shipper.py  test_streaming_docker_tailer.py  test_tailer.py  test_writer.py
tests/rclone/: helpers.py  test_cli_sdk_route.py  test_config_and_preconditions.py  test_estimate.py  test_init.py  test_migrate.py  test_restore_test.py  test_runner.py  test_specs.py  test_wizard_port.py
tests/sdk/: test_declaration.py  test_sdk_purity.py  test_sdk_types.py  test_wizard_contract.py
tests/wire/: conftest.py  test_admin_api_wire.py  test_s3_wire.py  test_state_wire.py
tests/wizard/: test_engine.py  test_journal.py
(+38 files in other folders)
