[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storm-pulse-agent"
version = "0.1.9"
description = "Secure server management agent for Storm Developments infrastructure"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "websockets>=14.0",
    "psutil>=6.0",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "mypy>=1.13", "types-psutil>=6.0", "import-linter>=2.0"]

[project.scripts]
stormpulse = "stormpulse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["stormpulse*"]
