[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storm-pulse-agent"
version = "0.3.2"
description = "Secure server management agent for Storm Developments infrastructure"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
dependencies = [
    "websockets>=14.0,<15.0",
    "psutil>=6.0",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "mypy>=1.13",
    "types-psutil>=6.0",
    "import-linter>=2.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0",
]

[project.scripts]
stormpulse = "stormpulse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# The wire tier (tests/wire/) needs a real Garage container and is deselected
# by default, so `make check` stays Docker-free and fast. `make test-wire`
# selects it with `-m garage`. tests/wire/conftest.py applies the marker to
# every test in that directory, so a new wire test cannot leak into the
# default suite by forgetting it.
addopts = "-m 'not garage'"
markers = [
    "garage: needs the real test Garage (make garage-up); run via make test-wire",
]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tests.*"
# Tests are exempt from annotation requirements but their bodies are still
# type-checked. NOTE: a per-module `strict = false` does NOT undo the
# individual flags the global `strict = true` turns on (a known mypy gotcha),
# so the relaxations are spelled out explicitly here.
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "dist", "storm_pulse_agent.egg-info"]

[tool.ruff.lint]
# E = pycodestyle errors. F = Pyflakes (real bugs). I = isort (import order).
# UP = pyupgrade (modernize idioms for py312).
select = ["E", "F", "I", "UP"]
# E501 (line-too-long) is handled by `ruff format` at line-length 88 for real
# code. Docstrings and long string literals stay where they are; lint-level
# E501 would otherwise force a flood of noqa pragmas with no real benefit.
ignore = ["E501"]

[tool.ruff.format]
# Black-compatible defaults. Quote style and line ending stay automatic so
# we don't fight the existing codebase on first run.
quote-style = "preserve"

[tool.setuptools.packages.find]
include = ["stormpulse*"]

[tool.setuptools.package-data]
# PEP 561: ship the marker so `stormpulse` is a typed dependency. An external
# integration adapter (CORE-007) is written against `stormpulse.sdk` and can
# now type-check the SDK as an installed dep, not just via MYPYPATH.
stormpulse = ["py.typed"]
